Added 2025 date table

--- a/2025.html
+++ b/2025.html
@@ -10,9 +10,47 @@
 
     <link rel="stylesheet" href="style.css">
 
+
+
     <title>The Adjoint School</title>
 
     <link rel="icon" href="images/leftright.png">
+
+		<style>
+		/* DivTable.com */
+		.divTable{
+			display: table;
+			width: 50%;
+			max-width: fit-content;
+			margin-left: auto;
+			margin-right: auto;
+		}
+		.divTableRow {
+			display: table-row;
+		}
+		.divTableHeading {
+			background-color: #EEE;
+			display: table-header-group;
+		}
+		.divTableCell, .divTableHead {
+			border: 1px solid #999999;
+			display: table-cell;
+			padding: 10px 10px;
+		}
+		.divTableHeading {
+			background-color: #EEE;
+			display: table-header-group;
+			font-weight: bold;
+		}
+		.divTableFoot {
+			background-color: #EEE;
+			display: table-footer-group;
+			font-weight: bold;
+		}
+		.divTableBody {
+			display: table-row-group;
+		}
+		</style>
 
 </head>
 <body>
@@ -79,6 +117,32 @@
     <hr></hr>
   
 		<h2 style="text-align: center">Project announcements coming soon!</h2>
+
+		<div class="divTable">
+		<div class="divTableBody">
+		<div class="divTableRow">
+		<div class="divTableCell">&nbsp;Applications Open:</div>
+		<div class="divTableCell">&nbsp;Nov 1</div>
+		</div>
+		<div class="divTableRow">
+		<div class="divTableCell">&nbsp;Applications Close:</div>
+		<div class="divTableCell">&nbsp;Dec 1</div>
+		</div>
+		<div class="divTableRow">
+		<div class="divTableCell">&nbsp;Adjoint School Begins:</div>
+		<div class="divTableCell">&nbsp;Jan 13</div>
+		</div>
+		<div class="divTableRow">
+		<div class="divTableCell">&nbsp;Research Week:</div>
+		<div class="divTableCell">&nbsp;May 19-23</div>
+		</div>
+		<div class="divTableRow">
+		<div class="divTableCell">&nbsp;ACT Conference:</div>
+		<div class="divTableCell">&nbsp;May 26-30</div>
+		</div>
+		</div>
+		</div>
+		<!-- DivTable.com -->
   
   </main>
   <!-- Optional JavaScript -->
