--- a/apply.html
+++ b/apply.html
@@ -61,12 +61,12 @@
 
     <p></p>
 
-    <p> Applications for the 2024 session are now closed.
+    <p> Applications for the 2025 session open November 1st and close December 1st.
      </p> 
 
      <p> If you have any questions, contact the organizers of the Adjoint School by emailing <a href="mailto:actadjointschool@gmail.com">actadjointschool@gmail.com</a>.</p>
 
-     <p><i><strong>A reminder for non-UK applicants</strong>: Please check <a href="https://www.gov.uk/check-uk-visa">whether you need a visa to attend the research week.</a> Keep in mind that processing times for visa applications may be long, so it may be necessary to start the process early to ensure that you can travel to the UK for the research week.</i></p>
+		 <!--<p><i><strong>A reminder for non-UK applicants</strong>: Please check <a href="https://www.gov.uk/check-uk-visa">whether you need a visa to attend the research week.</a> Keep in mind that processing times for visa applications may be long, so it may be necessary to start the process early to ensure that you can travel to the UK for the research week.</i></p>-->
 
     <hr></hr>
     <div class="row">
