--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
 
     <h3>Announcements</h3>
           <ul>
+            <li><i>Nov 1, 2024</i>. Applications for the 2025 session are open. See the application form under "Apply."</li>
 
-            <li><i>Oct 30, 2024</i>. Project descriptions for the 2025 session are available <a href="2025.html">here!</a> The 2025 application form will be available soon.</li>
+
+            <li><i>Oct 30, 2024</i>. Project descriptions for the 2025 session are available <a href="2025.html" target="_blank" rel="noopener noreferrer">here!</a> The 2025 application form will be available soon.</li>
 
             <li><i>Oct 30, 2024</i>. The organizers of the Adjoint School 2025 are Elena Dimitriadis Bermejo, Ari Rosenfield, Innocent Obi, and Drew McNeely. The steering committee consists of David Jaz Myers, Daniel Cicala, Elena di Lavore, and Brendan Fong.</li>
           </ul>
