--- a/apply.html
+++ b/apply.html
@@ -61,12 +61,12 @@
 
     <p></p>
 
-    <p> Applications for the 2025 session open November 1st and close December 1st.
+    <p> <a href="https://docs.google.com/forms/d/e/1FAIpQLSfypfdhLWGEaRml-ZHxq_mV6svuwa4UWBHFj5q9XLk9qqoIvA/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer"><b>Please apply for the 2025 session here!</b></a>
      </p> 
 
      <p> If you have any questions, contact the organizers of the Adjoint School by emailing <a href="mailto:actadjointschool@gmail.com">actadjointschool@gmail.com</a>.</p>
 
-		 <!--<p><i><strong>A reminder for non-UK applicants</strong>: Please check <a href="https://www.gov.uk/check-uk-visa">whether you need a visa to attend the research week.</a> Keep in mind that processing times for visa applications may be long, so it may be necessary to start the process early to ensure that you can travel to the UK for the research week.</i></p>-->
+	<p><i><strong>A reminder for non-US applicants</strong>: Please check <a href="https://travel.state.gov/content/travel/en/us-visas/tourism-visit/visitor.html" target="_blank" rel="noopener noreferrer">whether you need a visa to attend the research week.</a> Keep in mind that processing times for visa applications may be long, so it may be necessary to start the process early to ensure that you can travel to the US for the research week.</i></p>
 
     <hr></hr>
     <div class="row">
