--- a/2025.html
+++ b/2025.html
@@ -75,10 +75,10 @@
         </ul>
       </p>
     
-        <p> Current participants can find important links, information, and the schedule on the 
+       <!-- <p> Current participants can find important links, information, and the schedule on the 
        <a href = "https://docs.google.com/document/d/1ott4ZcQlvX3K5tGKh-xmifjAYlkzjB9gwbA4NdYviwA/edit?usp=sharing"> 
       Landing Page</a>. Please note that this document is only accessible to current Adjoint School students, TAs, and mentors. </p>
-
+       -->
     <hr></hr>
 
     <h3> Research Projects </h3>
