--- a/2025.html
+++ b/2025.html
@@ -88,7 +88,7 @@
           <div class = "past-proj">
             <center>
                 <h5>Rig Groupoids for Quantum Computation</h5>
-                <p><i>Mentor:</i> Robin Kaarsgaard Sales
+                <p><i>Mentor:</i> Robin Kaarsgaard
                 <br> <i>TA:</i> TBD
                 <br> <i>Students:</i> TBD
               </p> 
