--- a/2025.html
+++ b/2025.html
@@ -83,8 +83,8 @@
 
     <h3> Research Projects </h3>
   
-  <div class = "row">
-        <div class= "col-xl-6">
+ <div class = "row">
+  <!--       <div class= "col-xl-6">
           <div class = "past-proj">
             <center>
                 <h5>Rig Groupoids for Quantum Computation</h5>
@@ -135,7 +135,7 @@
         
         </div>
         </div>
-
+-->
 
         <div class= "col-xl-6 ">
           <div class = "past-proj">
