removing Robin's name from the intro paragraph on the website

--- a/2025.html
+++ b/2025.html
@@ -62,7 +62,7 @@
     <h1>The Adjoint School 2025</h1>
 
 
-    <p> The 2025 Adjoint School features projects mentored by Robin Kaarsgaard Sales, Laura Scull, Justin Hsu, and Georgios Bakirtzis.
+    <p> The 2025 Adjoint School features projects mentored by Laura Scull, Justin Hsu, and Georgios Bakirtzis.
       It is organized by Ari Rosenfield, Elena Dimitriadis Bermejo, Innocent Obi, and Drew McNeely. 
       The research week will be held at the University of Florida.</p>
 
