--- a/2025.html
+++ b/2025.html
@@ -84,58 +84,32 @@
     <h3> Research Projects </h3>
   
  <div class = "row">
-  <!--       <div class= "col-xl-6">
+  <div class= "col-xl-6">
           <div class = "past-proj">
             <center>
-                <h5>Rig Groupoids for Quantum Computation</h5>
-                <p><i>Mentor:</i> Robin Kaarsgaard
+                <h5>Modeling Quantum Parallelism Using Monads</h5>
+                <p><i>Mentor:</i> Juliana Kaizer Vizzotto
                 <br> <i>TA:</i> TBD
                 <br> <i>Students:</i> TBD
               </p> 
             </center>
             <hr> </hr>
             <p>
-                Semirings are algebraic structures comprised of two unital and
-                associative operations – thought of as addition and multiplication –
-                extended with a distributive law stating that multiplication must
-                distribute over addition. Their categorifications are rig categories,
-                also known as bimonoidal categories. These categories not only allow
-                composition in sequence but also in parallel in two different ways,
-                with canonical morphisms for distributing (and factoring) one parallel
-                composition over the other in a coherent way.
-                <br><br>
-                The category of finite sets with bijections between them is, in a
-                formal sense, the simplest possible rig category. It is also a
-                groupoid in that the action of every morphism can be undone by an
-                inverse. This category has been studied widely as a setting for
-                classical reversible computation, i.e., computations where each
-                computation step can be undone.
-                <br><br>
-                A quirky feature of quantum computation (without measurement) is that
-                it is also reversible.  Even more, quantum computation also takes
-                place in a rig groupoid, namely that of finite dimensional Hilbert
-                spaces and unitaries. Unlike finite sets and bijections, this rig
-                groupoid contains morphisms and equations that are not found
-                universally in rig groupoids – but what are they, and what do they
-                look like? In this project, we will explore the boundary between
-                classical and quantum computation through the lens of category
-                theory. We will do so by studying the extensions to the theory of
-                classical reversible computation (given by the rig groupoid of finite
-                sets and bijections) necessary to reproduce theories of quantum
-                computation (given by rig groupoids of unitaries).
+              Category theory provides a mathematical framework for understanding structures and their relationships abstractly. We can use the tools from category theory for reasoning about abstraction, modularity, and compositionality, offering a powerful framework for modeling complex systems in computer science. In the context of quantum computing,  we need to deal with the properties inherent of quantum information. Traditional categorical frameworks often model computations as sequential transformations, but quantum processes demand a  representation that captures: i) the quantum parallelism caused by the non-local wave character of quantum information which is qualitatively different from the classical notion of parallelism; and  also  ii) the notion of observation, or measurement, in which the observed part of the quantum state and every other part that is entangled with it immediately lose their wave character. 
+              <br><br>
+              In this project we will investigate the use of monads to model quantum parallelism, inspired by the work of Moggi on modeling computational effects. Moreover, quantum computation introduces additional  complexity, particularly with respect to measurement and the collapse of quantum states. Then we will study how to construct a categorical representation for the traditional general model of quantum computing based on density matrices and superoperators using a generalization of monads, called arrows.  Finally, we will investigate the use of relative monads in the context of quantum measurement.
             </p>
             <p> Readings</p>
             <ul>
-                <li> <i>Bimonoidal Categories, En-Monoidal
-                    Categories, and Algebraic K-Theory</i>, N. Johnson and D. Yau.</li>
+                <li> <i>What is the Categorical Model of Arrows?</i>, R. Atkey.</li>
 
-                <li> <i>With a Few
-                    Square Roots, Quantum Computing Is as Easy as Pi</i>, J. Carette, C. Heunen, R. Kaarsgaard, and A. Sabry</li>
+                <li> <i>Monads Need Not be Endofunctors</i>, T. Altenkirch, J. Chapman, and T. Uustalu.</li>
+
+                <li> <i>Structuring Quantum Effects: Superoperators as Arrows</i>, J. K. Vizzotto, T. Altenkirch, A. Sabry.</li>
             </ul>
         
         </div>
         </div>
--->
 
         <div class= "col-xl-6 ">
           <div class = "past-proj">
@@ -264,11 +238,11 @@ The second strand of work will investigate backwards error lenses, a lens-like s
   <h3> Sponsors </h3>
 
   <br>
-
-  <a href="https://conexus.com/" target="_blank" rel="noopener noreferrer"><img src="images/2024 sponsors/conexus.png" width="200px"></a>
+<!--  <a href="https://conexus.com/" target="_blank" rel="noopener noreferrer"><img src="images/2024 sponsors/conexus.png" width="200px"></a>
   <a href="https://cybercat.institute/" target="_blank" rel="noopener noreferrer"><img src="images/2024 sponsors/cybercatlogo.png" width="200px"></a>
   <a href="https://viete.io/" target="_blank" rel="noopener noreferrer"><img src="images/2024 sponsors/viete.png" width="200px"></a>
   <a href="https://www.symbolica.ai/" target="_blank" rel="noopener noreferrer"> <img src="images/2024 sponsors/symbolica.jpg" width="200px"></a>
+  -->
   <a href="https://topos.institute/" target="_blank" rel="noopener noreferrer"> <img src="images/2023 sponsors/topos-institute.jpg" width="200px"></a>
 
   
