official title for Juliana

--- a/2025.html
+++ b/2025.html
@@ -87,7 +87,7 @@
   <div class= "col-xl-6">
           <div class = "past-proj">
             <center>
-                <h5>Modeling Quantum Parallelism Using Monads</h5>
+                <h5>Structuring Quantum Effects with Monads and Arrows</h5>
                 <p><i>Mentor:</i> Juliana Kaizer Vizzotto
                 <br> <i>TA:</i> TBD
                 <br> <i>Students:</i> TBD
