Added gatas lab image

--- a/2025.html
+++ b/2025.html
@@ -59,21 +59,28 @@
 <main role="main" class="container">
 
 
-    <h1>The Adjoint School 2025</h1>
+	<h1>The Adjoint School 2025</h1>
 
 
     <p> The 2025 Adjoint School features projects mentored by Juliana Kaizer Vizzotto, Laura Scull, Justin Hsu, and Georgios Bakirtzis.
       It is organized by Ari Rosenfield, Elena Dimitriadis Bermejo, Innocent Obi, and Drew McNeely. 
       The research week will be held at the University of Florida.</p>
 
-   <h5> Important Dates </h5>
-      <p>
-        <ul>
-          <li><i>Dec 1, 2024</i>. Application Due</li>
-          <li><i>Jan - May, 2025</i>. Learning Seminar</li>
-          <li><i>May 26 - 30, 2025</i>. Research Week at the University of Florida</li>
-        </ul>
-      </p>
+		<div class="row">
+			<div class="column">
+				<h5> Important Dates </h5>
+				<p>
+					<ul>
+						<li><i>Dec 1, 2024</i>. Application Due</li>
+						<li><i>Jan - May, 2025</i>. Learning Seminar</li>
+						<li><i>May 26 - 30, 2025</i>. Research Week at the University of Florida</li>
+					</ul>
+				</p>
+			</div>
+			<div class="column">
+				<a href="https://gataslab.org/" target="_blank" rel="noopener noreferrer"> <img src="images/2025/uf-gatas.png" height="150px"></a>
+			</div>
+		</div>
     
        <!-- <p> Current participants can find important links, information, and the schedule on the 
        <a href = "https://docs.google.com/document/d/1ott4ZcQlvX3K5tGKh-xmifjAYlkzjB9gwbA4NdYviwA/edit?usp=sharing"> 
