Added some TAs to 2025.html

--- a/2025.html
+++ b/2025.html
@@ -169,7 +169,7 @@ develop this theme further in directions that most interest our group.
           <center>
               <h5> Compositional Generalization in Reinforcement Learning </h5>
               <p><i>Mentor:</i> Georgios Bakirtzis
-              <br> <i>TA: </i> TBD
+              <br> <i>TA: </i> Michail Savvas
               <br> <i>Students:</i> TBD
               </p>
           </center>
@@ -213,7 +213,7 @@ but not necessarily have experience in reinforcement learning.
           <h5> Categorical Metric Structures for Numerical Analysis
         </h5>
           <p><i>Mentor:</i> Justin Hsu
-          <br> <i>TA: </i> TBD
+          <br> <i>TA: </i> Jonas Forster, Chase Ford
           <br> <i>Students:</i> TBD
           </p>
       </center>
