--- a/2025.html
+++ b/2025.html
@@ -123,7 +123,7 @@
             <center>
                 <h5>Homotopy of Graphs</h5>
                 <p><i>Mentor:</i> Laura Scull
-                <br> <i>TA: </i> TBD
+                <br> <i>TA:</i> Rachel Hardeman
                 <br> <i>Students:</i> TBD
                 </p>
             </center>
