--- a/2025.html
+++ b/2025.html
@@ -97,7 +97,7 @@
                 <h5>Structuring Quantum Effects with Monads and Arrows</h5>
                 <p><i>Mentor:</i> Juliana Kaizer Vizzotto
                 <br> <i>TA:</i> TBD
-                <br> <i>Students:</i> TBD
+                <br> <i>Students:</i> Quan Long, Khyathi Komalan, Tessa Kammermeier, Andrew Krenz
               </p> 
             </center>
             <hr> </hr>
@@ -108,8 +108,6 @@
             </p>
             <p> Readings</p>
             <ul>
-                <li> <i>What is the Categorical Model of Arrows?</i>, R. Atkey.</li>
-
                 <li> <i>Monads Need Not be Endofunctors</i>, T. Altenkirch, J. Chapman, and T. Uustalu.</li>
 
                 <li> <i>Structuring Quantum Effects: Superoperators as Arrows</i>, J. K. Vizzotto, T. Altenkirch, A. Sabry.</li>
@@ -124,7 +122,7 @@
                 <h5>Homotopy of Graphs</h5>
                 <p><i>Mentor:</i> Laura Scull
                 <br> <i>TA:</i> Rachel Hardeman
-                <br> <i>Students:</i> TBD
+                <br> <i>Students:</i> Jana Nickel, Nastassia Samadzelkava, Markus Kirolos Youssef, Maria del Pilar Ramos Huila
                 </p>
             </center>
             <hr></hr>
@@ -170,7 +168,7 @@ develop this theme further in directions that most interest our group.
               <h5> Compositional Generalization in Reinforcement Learning </h5>
               <p><i>Mentor:</i> Georgios Bakirtzis
               <br> <i>TA: </i> Michail Savvas
-              <br> <i>Students:</i> TBD
+              <br> <i>Students:</i> Tanner Duve, Theo Maxime Tyburn, Andrea Abeje-Stine, Onkar Kale
               </p>
           </center>
           <hr></hr>
@@ -214,7 +212,7 @@ but not necessarily have experience in reinforcement learning.
         </h5>
           <p><i>Mentor:</i> Justin Hsu
           <br> <i>TA: </i> Jonas Forster, Chase Ford
-          <br> <i>Students:</i> TBD
+          <br> <i>Students:</i> Jon Hakon Gardarsson, Laura Zielinski, Jessica Richards, Aven Dauz
           </p>
       </center>
       <hr></hr>
