--- a/2025.html
+++ b/2025.html
@@ -110,7 +110,7 @@
             <ul>
                 <li> <i>Monads Need Not be Endofunctors</i>, T. Altenkirch, J. Chapman, and T. Uustalu.</li>
 
-                <li> <i>Structuring Quantum Effects: Superoperators as Arrows</i>, J. K. Vizzotto, T. Altenkirch, A. Sabry.</li>
+                <li> <i>What is the categorical model of arrows?</i>, R. Atkey.</li>
             </ul>
         
         </div>
