--- a/2025.html
+++ b/2025.html
@@ -211,7 +211,7 @@ but not necessarily have experience in reinforcement learning.
           <h5> Categorical Metric Structures for Numerical Analysis
         </h5>
           <p><i>Mentor:</i> Justin Hsu
-          <br> <i>TA: </i> Jonas Forster, Chase Ford
+          <br> <i>TA: </i> Jonas Forster, Chase Ford, Max Fan
           <br> <i>Students:</i> Jon Hakon Gardarsson, Laura Zielinski, Jessica Richards, Aven Dauz
           </p>
       </center>
