--- a/2025.html
+++ b/2025.html
@@ -173,24 +173,9 @@ develop this theme further in directions that most interest our group.
           </center>
           <hr></hr>
           <p>
-            Reinforcement learning is a form of semi-supervised learning.
-In reinforcement learning we have an environment,
-an agent that acts on this environment through actions,
-and a reward signal.
-It is the reward signal that makes reinforcement learning a powerful technique
-in the control of autonomous systems, but it is also the sparcity
-of this reward structure that engenders issues.
-Compositional methods decompose reinforcement learning to parts
-that are tractable. Categories provide a nice framework
-to think about compositional reinforcement learning.
-<br><br>
-An important open problem in reinforcement learning is /compositional generalization.
-This project will tackle the problem
-of compositional generalization in reinforcement learning
-in a category-theoretic computational framework in Julia.
-Expected outcomes are of this project are category theory derived algorithms and concrete experiments.
-Participants will be expected to be strong computationally,
-but not necessarily have experience in reinforcement learning.
+            Reinforcement learning is a form of semi-supervised learning. In reinforcement learning we have an environment, an agent that acts on this environment through actions, and a reward signal. It is the reward signal that makes reinforcement learning a powerful technique in the control of autonomous systems, but it is also the sparsity of this reward structure that engenders issues. Compositional methods decompose reinforcement learning to parts that are tractable. Categories provide a nice framework to think about compositional reinforcement learning.<br><br>
+
+            An important open problem in reinforcement learning is compositional generalization. This project will tackle the problem of compositional generalization in reinforcement learning in a category-theoretic computational framework in Julia. Expected outcomes of this project are category theory derived algorithms and concrete experiments. Participants will be expected to be strong computationally, but not necessarily have experience in reinforcement learning.
           </p>
       <p> Readings</p>
       <ul>
