--- a/apply.html
+++ b/apply.html
@@ -61,7 +61,7 @@
 
     <p></p>
 
-    <p> <a href="https://docs.google.com/forms/d/e/1FAIpQLSfypfdhLWGEaRml-ZHxq_mV6svuwa4UWBHFj5q9XLk9qqoIvA/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer"><b>Please apply for the 2025 session here!</b></a>
+    <p> Applications for the 2025 session are now closed. Check back in summer for the 2026 application.
      </p> 
 
      <p> If you have any questions, contact the organizers of the Adjoint School by emailing <a href="mailto:actadjointschool@gmail.com">actadjointschool@gmail.com</a>.</p>
