Adding AWS logo

--- a/2025.html
+++ b/2025.html
@@ -234,7 +234,7 @@ The second strand of work will investigate backwards error lenses, a lens-like s
   <a href="https://www.symbolica.ai/" target="_blank" rel="noopener noreferrer"> <img src="images/2024 sponsors/symbolica.jpg" width="200px"></a>
   -->
   <a href="https://topos.institute/" target="_blank" rel="noopener noreferrer"> <img src="images/2023 sponsors/topos-institute.jpg" width="200px"></a>
-
+  <a href="" target="_blank" rel="noopener noreferrer"><img src="images/2025/aws-logo.png" width="110px"></a>
   
   </main>
   <!-- Optional JavaScript -->
