adding Miguel as TA

--- a/2025.html
+++ b/2025.html
@@ -96,7 +96,7 @@
             <center>
                 <h5>Structuring Quantum Effects with Monads and Arrows</h5>
                 <p><i>Mentor:</i> Juliana Kaizer Vizzotto
-                <br> <i>TA:</i> TBD
+                <br> <i>TA:</i> Miguel Lopez
                 <br> <i>Students:</i> Quan Long, Khyathi Komalan, Tessa Kammermeier, Andrew Krenz
               </p> 
             </center>
