Cropped 2025 group photo

--- a/2025.html
+++ b/2025.html
@@ -72,7 +72,7 @@
       <div class="col-md-2">
       </div>
       <div class="col-md-8">
-          <img src="images/2025-group.jpg" class="rounded img-fluid group"></img>
+          <img src="images/2025-group-cropped.jpg" class="rounded img-fluid group"></img>
     </div>
     <div class="col-md-2">
     </div>
