Consolidated all navbars into a single navbar.html. Added 2026.html.

--- a/2026.html
+++ b/2026.html
@@ -26,16 +26,15 @@
 				});
 		</script>
 
+
 <main role="main" class="container">
 
 
-	<h1>The Adjoint School 2025</h1>
+	<h1>The Adjoint School 2026</h1>
 
 
-    <p> The 2025 Adjoint School featured projects mentored by Juliana Kaizer Vizzotto, Laura Scull, Justin Hsu, and Georgios Bakirtzis.
-      It was organized by Ari Rosenfield, Elena Dimitriadis Bermejo, Innocent Obi, and Drew McNeely. 
-      The research week was held at the University of Florida.
-			Thanks to James Fairbanks and the GATAS Lab for their help in organizing.
+    <p> The 2026 Adjoint School is organized by Innocent Obi, Drew McNeely, Diana Kessler, and Aven Dauz. 
+      The research week will be held at Tallinn University in Estonia.
 		</p>
 
     <div class="row">
