--- a/index.html
+++ b/index.html
@@ -16,44 +16,15 @@
 
   </head>
   <body>
-        <nav class="navbar navbar-expand-md navbar-dark bg-purple fixed-top">
-        <a class="navbar-brand" href="index.html">The Adjoint School</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    
-        <div class="collapse navbar-collapse justify-content-end" id="navbarsExampleDefault">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="apply.html">Apply</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="inclusivity.html">Inclusivity</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Past Schools</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown01">
-                        <a class="dropdown-item" href="2018.html">Adjoint School 2018</a>
-                        <a class="dropdown-item" href="2019.html">Adjoint School 2019</a>
-                        <a class="dropdown-item" href="2020.html">Adjoint School 2020</a>
-                        <a class="dropdown-item" href="2021.html">Adjoint School 2021</a>
-                        <a class="dropdown-item" href="2022.html">Adjoint School 2022</a>
-                        <a class="dropdown-item" href="2023.html">Adjoint School 2023</a>
-                        <a class="dropdown-item" href="2024.html">Adjoint School 2024</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="papers.html">Papers & Blogposts</a>
-                </li>
-                <li>
-                    <a class="nav-link" href="2025.html">Adjoint School 2025</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+
+		<div id="navbar"></div>
+		<script>
+			fetch("./navbar.html")
+				.then(response => response.text())
+				.then(data => {
+					document.getElementById("navbar").innerHTML = data;
+				});
+		</script>
 
 
       <main role="main" class="container">
@@ -81,14 +52,8 @@
 
     <h3>Announcements</h3>
           <ul>
-            <li><i>Nov 1, 2024</i>. Applications for the 2025 session are open. See the application form under "Apply."</li>
-
-
-            <li><i>Oct 30, 2024</i>. Project descriptions for the 2025 session are available <a href="2025.html" target="_blank" rel="noopener noreferrer">here!</a> The 2025 application form will be available soon.</li>
-
-            <li><i>Oct 30, 2024</i>. The organizers of the Adjoint School 2025 are Elena Dimitriadis Bermejo, Ari Rosenfield, Innocent Obi, and Drew McNeely. The steering committee consists of David Jaz Myers, Daniel Cicala, Elena di Lavore, and Brendan Fong.</li>
+            <li><i>Sept 2025</i>. Stay tuned for project announcements and application dates for Adjoint School 2026!</li>
           </ul>
-
 
           </div>
 
