2026.html is ready to go live. Deleted some old info from index.html and about.html

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
 
     <h1>The Adjoint School</h1>
+    <h2>A research program for applied category theory</h2>
 
     <div class="row">
         <div class="col-lg-7 v-align">
@@ -52,12 +53,10 @@
 
     <h3>Announcements</h3>
           <ul>
-            <li><i>Sept 2025</i>. Stay tuned for project announcements and application dates for Adjoint School 2026!</li>
+						<li><i>Sept 2025</i>. Stay tuned for project announcements and application dates for <a href="2026.html">Adjoint School 2026</a>!</li>
           </ul>
 
           </div>
-
-
 </main>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
