--- a/2026.html
+++ b/2026.html
@@ -32,7 +32,7 @@
 
 
     <p style="text-align: center"> The 2026 Adjoint School is organized by Innocent Obi, Drew McNeely, Diana Kessler, and Aven Dauz. 
-      The research week will be held at Tallinn University in Estonia.
+      The research week will be held at <a href="https://taltech.ee/">Tallinn University of Technology</a> in Estonia.
 		</p>
 
     <div class="row">
