--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
     <h3>Announcements</h3>
           <ul>
+			  			<li><i>Oct 2025</i>. Application opening date for Adjoint School 2026 has been postponed to November 14. Stay tuned for projects!</li>
 						<li><i>Sept 2025</i>. Stay tuned for project announcements and application dates for <a href="2026.html">Adjoint School 2026</a>!</li>
           </ul>
 
