Ready to merge for application opening

--- a/apply.html
+++ b/apply.html
@@ -27,12 +27,18 @@
 
       <main role="main" class="container">
 
-    <h1>Apply</h1>
+    <h1 style="text-align: center">Apply</h1>
 
     <p></p>
 
-    <p> Applications for the 2025 session are now closed. Check back in summer for the 2026 application.
-     </p> 
+<div class="alert alert-warning text-center mx-auto" style="max-width: 700px;"><strong>Application deadline is December 14, 11:59 PM Anywhere On Earth</strong></div>
+
+<div class="text-center my-5">
+  <a href="#" class="btn btn-primary btn-lg px-5 py-3" >
+		APPLY HERE
+  </a>
+</div>
+
 
      <p> If you have any questions, contact the organizers of the Adjoint School by emailing <a href="mailto:actadjointschool@gmail.com">actadjointschool@gmail.com</a>.</p>
 
