--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
       <main role="main" class="container">
 
 
-    <h1>The Adjoint School</h1>
-    <h2>A research program for applied category theory</h2>
 
     <div class="row">
         <div class="col-lg-7 v-align">
+						<h1 style="text-align: center;">The Adjoint School</h1>
+						<h2 style="text-align: center;">A Research Program for Applied Category Theory</h2>
             <p>The Adjoint School is an annual research school in applied category theory. It aims to
                 <ul>
                     <li> foster an open-hearted and open-minded environment where new applied category theorists develop the skills of research,</li>
@@ -43,6 +43,16 @@
                 </ul>
             </p>
             <p>To learn more about the school, please visit the <a href="about.html">About</a> page.</p>
+
+<div class="alert alert-warning text-center mx-auto" style="max-width: 700px;"><strong>Application deadline is December 14, 11:59 PM Anywhere On Earth</strong></div>
+
+<div class="text-center my-5">
+  <a href="#" class="btn btn-primary btn-lg px-5 py-3" >
+		APPLY HERE
+  </a>
+</div>
+
+
         </div>
         <div class="col-lg-5 v-align">
             <img src="images/2018-actionshot.jpg" class="rounded img-fluid"></img>
