--- a/2026.html
+++ b/2026.html
@@ -28,13 +28,13 @@
 
 <main role="main" class="container">
 
-	<h1 style="text-align: center">The Adjoint School 2026</h1>
+	<h1 class="text-center display-4 my-4">The Adjoint School 2026</h1>
 
 
-    <p style="text-align: center"> The 2026 Adjoint School research week will be held at <a href="https://taltech.ee/">Tallinn University of Technology</a> in Estonia.
+    <p class="text-center lead"> The 2026 Adjoint School research week will be held at <a href="https://taltech.ee/">Tallinn University of Technology</a> in Estonia.
 		</p>
 
-    <div class="row">
+    <div class="row my-4">
       <div class="col-md-2"></div>
 			<div class="col-md-8">
 				<div class="image-container">
@@ -46,6 +46,17 @@
 		</div>
 
 <h2 class="important-dates-title" style="margin-top: 2rem">Applications are open!</h2>
+
+<div class="alert alert-warning text-center mx-auto" style="max-width: 700px;"><strong>Application deadline is December 14, 11:59 PM Anywhere On Earth</strong></div>
+
+<div class="text-center my-5">
+  <a href="#" class="btn btn-primary btn-lg px-5 py-3" >
+		APPLY HERE
+  </a>
+</div>
+
+<hr></hr>
+
 <h2 class="important-dates-title" style="margin-top: 2rem">Research Projects:</h2>
 
 <div class = "row">
@@ -108,47 +119,19 @@ The project will begin with a categorical perspective on quantum nonlocality and
 
       <div class= "col-xl-6 ">
         <div class = "past-proj">
-          <center>
-              <h5>TBD</h5>
-              <p><i>Mentor:</i> Prakash Panangaden
-              <br> <i>TA: </i>
-              <br> <i>Students:</i> TBD
-              </p>
-          </center>
-          <hr></hr>
-          <p>TBD</p>
-      <p> Readings</p>
-      <ul>
-          <li>TBD</li>
-          <li>TBD</li>
-      </ul>
-      
+						<h1 class="important-dates-title" style="text-align: center; margin-top: 3cm; margin-bottom; 3cm;">
+							Coming Soon
+						</h1>
         </div>
       </div>
 
-  <div class= "col-xl-6 ">
-    <div class = "past-proj">
-      <center>
-          <h5> TBD
-        </h5>
-          <p><i>Mentor:</i> TBD
-          <br> <i>TA: </i> TBD
-          <br> <i>Students:</i> TBD
-          </p>
-      </center>
-      <hr></hr>
-      <p>TBD</p>
-  <p> Readings</p>
-  <ul>
-      <li>TBD
-      </li>
-      <li>TBD
-    </li>
-
-  </ul>
-  
-    </div>
-  </div>
+			<div class= "col-xl-6 ">
+				<div class = "past-proj">
+					<h1 class="important-dates-title" style="text-align: center; margin-top: 3cm; margin-bottom; 3cm;">
+						Coming Soon
+					</h1>
+				</div>
+			</div>
 </div>
 
 <hr></hr>
