--- a/2026.html
+++ b/2026.html
@@ -63,7 +63,7 @@
   <div class= "col-xl-6">
           <div class = "past-proj">
             <center>
-                <h5>A double category theoretic perspective on partiality</h5>
+                <h5>A Double Category Theoretic Perspective on Partiality</h5>
                 <p><i>Mentors:</i> Nathanael Arkor and Bryce Clarke
                 <br> <i>TA:</i> TBD
                 <br> <i>Students:</i> TBD
