--- a/2026.html
+++ b/2026.html
@@ -31,8 +31,7 @@
 	<h1 class="text-center display-4 my-4">The Adjoint School 2026</h1>
 
 
-    <p class="text-center lead"> The 2026 Adjoint School research week will be held at <a href="https://taltech.ee/">Tallinn University of Technology</a> in Estonia.
-		</p>
+    <h2 class="text-center display-5"> June 29 - July 3, <a href="https://taltech.ee/">Tallinn University of Technology</a>, Estonia</h2>
 
     <div class="row my-4">
       <div class="col-md-2"></div>
