--- a/2026.html
+++ b/2026.html
@@ -106,9 +106,9 @@ The project will begin with a categorical perspective on quantum nonlocality and
             <br>
           <p> Readings</p>
           <ul>
-            <li><i>Closing Bell: Boxing black box simulations in the resource theory of contextuality</i>, Rui Soares Barbosa, Martti Karvonen, Shane Mansfield 
+            <li> <a href="https://arxiv.org/abs/2104.11241"><i>Closing Bell: Boxing black box simulations in the resource theory of contextuality</i></a>, Rui Soares Barbosa, Martti Karvonen, Shane Mansfield 
           </li>
-          <li> <i>Quantum Advantage from Any Non-Local Game</i>, Yael Kalai, Alex Lombardi, Vinod Vaikuntanathan, Lisa Yang
+          <li> <a href="https://arxiv.org/abs/2203.15877"><i>Quantum Advantage from Any Non-Local Game</i></a>, Yael Kalai, Alex Lombardi, Vinod Vaikuntanathan, Lisa Yang
         </li>
   
           </ul>
