Adding Prakash's project

--- a/2026.html
+++ b/2026.html
@@ -118,9 +118,27 @@ The project will begin with a categorical perspective on quantum nonlocality and
 
       <div class= "col-xl-6 ">
         <div class = "past-proj">
-						<h1 class="important-dates-title" style="text-align: center; margin-top: 3cm; margin-bottom; 3cm;">
-							Coming Soon
-						</h1>
+          <center>
+              <h5>Approximating Markov Processes Categorically </h5>
+              <p><i>Mentor:</i> Prakash Panangaden
+              <br> <i>TA:</i> TBD
+              <br> <i>Students:</i> TBD
+              </p>
+          </center>
+          <hr></hr>
+          <p>Markov processes are fundamental models of probabilistic systems that have a vast range of applications. They have been studied intensively since the 1930s and have spawned a vast literature. In the 1980’s various researchers (Kozen, Vardi, Larsen and Skou) began studying Markov processes from the point of view of modern programming language theory. In the 1990s new ideas appeared with the incorporation of real-time processes and synchronization (Hillston), model checking (Baier, Kwiatkowska and others) and probabilistic bisimulation on continuous state spaces (Desharnais et al.) as well as metric analogues of bisimulation (Desharnais et al, van Breugel and Worrell). Now these topics are flourishing with many people studying them from categorical viewpoints.</p>
+          
+          <p>This project concerns an approach to approximating continuous-state Markov processes with finite ones. The approach we will follow uses categorical ideas very heavily and exploits duality theory. It shows how approximation and bisimulation can be understood as morphisms in a suitable category. Existing research has also shown that approximations and bisimulations are morphisms in the same category and how one can re-construct the original process as a suitable limit of the approximants. There are some open issues related to the construction of processes as suitable projective limits which we will investigate in the course of the project. If time permits we can explore the possibility of defining metrics on these Markov processes.</p>
+          
+          <br>
+        <p> Readings</p>
+        <ul>
+          <li> <a href="https://www.brics.dk/RS/97/4/BRICS-RS-97-4.pdf"><i> Bisimulation for Labeled Markov Processes</i></a>, Richard Blute, Josee Desharnais, Abbas Edalat, Prakash Panangaden
+        </li>
+        <li> <a href="https://homepages.inf.ed.ac.uk/gdp/publications/Approx_Markov.pdf"><i>Approximating Markov Processes by Averaging</i></a>, Philippe Chaput, Vincent Danos, Prakash Panangaden, and Gordon Plotkin
+      </li>
+
+        </ul>
         </div>
       </div>
 
