--- a/apply.html
+++ b/apply.html
@@ -31,7 +31,7 @@
 
     <p></p>
 
-<div class="alert alert-warning text-center mx-auto" style="max-width: 700px;"><strong>Application deadline is December 14, 11:59 PM Anywhere On Earth</strong></div>
+<div class="alert alert-warning text-center mx-auto" style="max-width: 700px;"><strong>Application deadline is December <del>14</del> <ins style="color:red">21</ins>, 11:59 PM Anywhere On Earth</strong></div>
 
 <div class="text-center my-5">
   <a href="https://docs.google.com/forms/d/e/1FAIpQLSc3BE-nf9B7GoOjGY4Kak9QLpNcE-xdhy__q-KNvQwsXxyCJA/viewform?usp=dialog" class="btn btn-primary btn-lg px-5 py-3" >
