--- a/2026.html
+++ b/2026.html
@@ -46,7 +46,7 @@
 
 <h2 class="important-dates-title" style="margin-top: 2rem">Applications are open!</h2>
 
-<div class="alert alert-warning text-center mx-auto" style="max-width: 700px;"><strong>Application deadline is December <del>14</del> <ins style="color:red">21</ins>, 11:59 PM Anywhere On Earth</strong></div>
+<div class="alert alert-warning text-center mx-auto" style="max-width: 700px;"><strong>Application deadline is December <span style="color:red">extended to December 21</span>, 11:59 PM Anywhere On Earth</strong></div>
 
 <div class="text-center my-5">
   <a href="https://docs.google.com/forms/d/e/1FAIpQLSc3BE-nf9B7GoOjGY4Kak9QLpNcE-xdhy__q-KNvQwsXxyCJA/viewform?usp=dialog" class="btn btn-primary btn-lg px-5 py-3" >
