--- a/2026.html
+++ b/2026.html
@@ -44,15 +44,7 @@
 			<div class="col-md-2"></div>
 		</div>
 
-<h2 class="important-dates-title" style="margin-top: 2rem">Applications are open!</h2>
-
-<div class="alert alert-warning text-center mx-auto" style="max-width: 700px;"><strong>Application deadline is <span style="color:red">extended to December 21</span>, 11:59 PM Anywhere On Earth</strong></div>
-
-<div class="text-center my-5">
-  <a href="https://docs.google.com/forms/d/e/1FAIpQLSc3BE-nf9B7GoOjGY4Kak9QLpNcE-xdhy__q-KNvQwsXxyCJA/viewform?usp=dialog" class="btn btn-primary btn-lg px-5 py-3" >
-		APPLY HERE
-  </a>
-</div>
+<div class="alert alert-warning text-center mx-auto" style="max-width: 700px;"><strong>Applications for the 2026 Adjoint School are closed</strong></div>
 
 <hr></hr>
 
