--- a/apply.html
+++ b/apply.html
@@ -31,14 +31,7 @@
 
     <p></p>
 
-<div class="alert alert-warning text-center mx-auto" style="max-width: 700px;"><strong>Application deadline is <span style="color:red">extended to December 21</span>, 11:59 PM Anywhere On Earth</strong></div>
-
-<div class="text-center my-5">
-  <a href="https://docs.google.com/forms/d/e/1FAIpQLSc3BE-nf9B7GoOjGY4Kak9QLpNcE-xdhy__q-KNvQwsXxyCJA/viewform?usp=dialog" class="btn btn-primary btn-lg px-5 py-3" >
-		APPLY HERE
-  </a>
-</div>
-
+<div class="alert alert-warning text-center mx-auto" style="max-width: 700px;"><strong>Applications for the 2026 Adjoint School are closed</strong></div>
 
      <p> If you have any questions, contact the organizers of the Adjoint School by emailing <a href="mailto:actadjointschool@gmail.com">actadjointschool@gmail.com</a>.</p>
 
