Added Ana Sokolova and replaced Bisim Markov paper on 2026.html

--- a/2026.html
+++ b/2026.html
@@ -125,7 +125,7 @@ The project will begin with a categorical perspective on quantum nonlocality and
           <br>
         <p> Readings</p>
         <ul>
-          <li> <a href="https://www.brics.dk/RS/97/4/BRICS-RS-97-4.pdf"><i> Bisimulation for Labeled Markov Processes</i></a>, Richard Blute, Josee Desharnais, Abbas Edalat, Prakash Panangaden
+          <li> <a href="/assets/papers/bisim-markov.pdf"><i> Bisimulation for Labeled Markov Processes</i></a>, Josee Desharnais, Abbas Edalat, Prakash Panangaden
         </li>
         <li> <a href="https://homepages.inf.ed.ac.uk/gdp/publications/Approx_Markov.pdf"><i>Approximating Markov Processes by Averaging</i></a>, Philippe Chaput, Vincent Danos, Prakash Panangaden, and Gordon Plotkin
       </li>
@@ -136,9 +136,25 @@ The project will begin with a categorical perspective on quantum nonlocality and
 
 			<div class= "col-xl-6 ">
 				<div class = "past-proj">
-					<h1 class="important-dates-title" style="text-align: center; margin-top: 3cm; margin-bottom; 3cm;">
-						Coming Soon
-					</h1>
+          <center>
+              <h5>Variants of (Coalgebraic) Simulations</h5>
+              <p><i>Mentor:</i> Ana Sokolova
+              <br> <i>TA:</i> TBD
+              <br> <i>Students:</i> TBD
+              </p>
+          </center>
+          <hr></hr>
+
+					<p>This project has a computer science feel and background. In formal methods and theoretical computer science, we mainly deal with models of systems that are comprised of states and structured transitions between them. Such models are used as abstract representation of programs, protocols, and various reactive and dynamical systems. Comparing the behaviour of states in such systems has been the topic of lot of research. An elegant categorical framework for a uniform study of many such models is given by coalgebra, and within the theory of coalgebras there are canonical notions of behavioural equivalence. Less fundamental and more recent, there also exist different canonical notions of behavioural simulations and behavioural distances [<a href="https://www.sciencedirect.com/science/article/pii/S030439750400444X">Hughes and Jacobs</a>, <a href="https://lmcs.episciences.org/864">Hasuo '08</a>, <a href="https://link.springer.com/chapter/10.1007/978-3-642-15375-4_31">Hasuo '10</a>, <a href="https://arxiv.org/abs/2303.15279">Rot & Wissmann</a>, <a href="https://arxiv.org/abs/2507.10732">Desharnais & Sokolova</a>]. Central to these simulations is a notion of an order on structured transitions.</p>
+
+					The goal of this small research project is to:
+					<ol>
+						<li> make a clean overview of the several existing notions of coalgebraic simulations, and their interconnection </li>
+						<li> focus on the recent semi-coalgebraic notion of epsilon-simulation (Desharnais&Sokolova'26) and find the minimal requirements for a coalgebraic genearlization </li>
+						<li> study characteristic properties of this (and other) types of coalgebraic simulations </li>
+						<li> study the necessary properties of an order on structured transitions, for suitable notions of simulation and in particular experiment with different orders. </li>
+					</ol>
+
 				</div>
 			</div>
 </div>
