--- a/2026.html
+++ b/2026.html
@@ -127,7 +127,7 @@ The project will begin with a categorical perspective on quantum nonlocality and
         <ul>
           <li> <a href="/assets/papers/bisim-markov.pdf"><i> Bisimulation for Labeled Markov Processes</i></a>, Josee Desharnais, Abbas Edalat, Prakash Panangaden
         </li>
-        <li> <a href="https://homepages.inf.ed.ac.uk/gdp/publications/Approx_Markov.pdf"><i>Approximating Markov Processes by Averaging</i></a>, Philippe Chaput, Vincent Danos, Prakash Panangaden, and Gordon Plotkin
+        <li> <a href="/assets/papers/approx_avg.pdf"><i>Approximating Markov Processes by Averaging</i></a>, Philippe Chaput, Vincent Danos, Prakash Panangaden, and Gordon Plotkin
       </li>
 
         </ul>
