Added TAs to 2026.html

--- a/2026.html
+++ b/2026.html
@@ -113,7 +113,7 @@ The project will begin with a categorical perspective on quantum nonlocality and
           <center>
               <h5>Approximating Markov Processes Categorically </h5>
               <p><i>Mentor:</i> Prakash Panangaden
-              <br> <i>TA:</i> TBD
+              <br> <i>TA:</i> Cristina Matache
               <br> <i>Students:</i> TBD
               </p>
           </center>
@@ -139,7 +139,7 @@ The project will begin with a categorical perspective on quantum nonlocality and
           <center>
               <h5>Variants of (Coalgebraic) Simulations</h5>
               <p><i>Mentor:</i> Ana Sokolova
-              <br> <i>TA:</i> TBD
+              <br> <i>TA:</i> Ralph Sarkis
               <br> <i>Students:</i> TBD
               </p>
           </center>
