Added Amin as a TA to 2026.html

--- a/2026.html
+++ b/2026.html
@@ -79,7 +79,7 @@ Double category theory provides a convenient and expressive setting in which to 
             <center>
                 <h5>Functoriality in Quantum Nonlocality and Interactive Games</h5>
                 <p><i>Mentor:</i> Martti Karvonen
-                <br> <i>TA:</i> TBD
+                <br> <i>TA:</i> Amin Karamlou
                 <br> <i>Students:</i> TBD
                 </p>
             </center>
